test/files/neg/no-predef.check
no-predef.scala:2: error: type mismatch;
 found   : scala.Long(5L)
 required: java.lang.Long
  def f1 = 5L: java.lang.Long
           ^
no-predef.scala:3: error: type mismatch;
 found   : java.lang.Long
 required: scala.Long
  def f2 = new java.lang.Long(5) : Long
           ^
<<<<<<< HEAD
no-predef.scala:4: error: value map is not a member of java.lang.String
=======
no-predef.scala:4: error: value map is not a member of String
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  def f3 = "abc" map (_ + 1)
                 ^
three errors found
